frontend/test/should_fail/cast_004.grg
using attrib_model_001, enum_model_001;

rule r {
	x: NDOUBLE;
	k: A;

	modify {
		eval {
			k.e = (te) x.a;
		}
	}
}
